--- a/SmoFluidProps/templates/SmoFluidProps/SetUp.html
+++ b/SmoFluidProps/templates/SmoFluidProps/SetUp.html
@@ -3,11 +3,16 @@
 		<form action = {% url  'SmoFluidProps:FluidProps_SetUp' %} method = "post">
 		{% csrf_token %}
 		<table>
-			{{form.as_table}}
+			{% for field in form %}
+			<tr>
+			<td style=" text-align: right; font-weight: bold;">{{ field.label }} &nbsp</td><td style=" text-align: left;">{{ field }}</td>
+			</tr>
+			{% endfor %}	
 		</table>
 		<input type = "submit" name = "submit" value = "submit"/>
 		</form>
 		{% if propsTable %}
+		
 		<table border="1" style="width:100%">
 			<tr>
 			{% for colName in columnNames %}
