--- a/SmoFluidProps/templates/SmoFluidProps/SetUp.html
+++ b/SmoFluidProps/templates/SmoFluidProps/SetUp.html
@@ -1,4 +1,6 @@
-{% extends "SmoFluidProps/Base.html" %}
+{% extends "Platform.html" %}
+{% load bootstrap_toolkit %}
+
 {% block content %}
 		<form action = {% url  'SmoFluidProps:FluidProps_SetUp' %} method = "post">
 		{% csrf_token %}
@@ -7,10 +9,14 @@
 			<tr>
 			<td style=" text-align: right; font-weight: bold;">{{ field.label }} &nbsp</td><td style=" text-align: left;">{{ field }}</td>
 			</tr>
-			{% endfor %}	
+			{% endfor %}
+			<tr>
+			<td></td>	
+			<td><input style=" text-align: left;" type = "submit" name = "submit" value = "Submit"/></td>
+			</tr>
 		</table>
-		<input type = "submit" name = "submit" value = "submit"/>
 		</form>
+		<br>
 		{% if propsTable != None %}
 		
 		<table border="1" style="width:100%">
