File upload - half way
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -17,7 +17,7 @@
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Management <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Action</a></li>
+        <li><a href="{% url 'DataManagement:ImportCSV' %}">Import CSV</a></li>
         <li><a href="#">Another action</a></li>
         <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
