Added pop-up alert for invalid file upload form input.
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/CSVform.html
+++ b/DataManagement/templates/CSVform.html
@@ -1,7 +1,14 @@
 {% extends "Platform.html" %}
 {% load bootstrap_toolkit %}
 
+
 {% block content %}
+		<script>
+		if ("{{ errMessage }}")
+				{alert("{{ errMessage }}")};
+			
+		</script>
+
 		<form action = '' method = "POST" enctype='multipart/form-data'>
 		{% csrf_token %}
 		<table>
@@ -15,6 +22,11 @@
 			<td><input style=" text-align: left;" type = "submit" name = "submit" value = "Submit"/></td>
 			</tr>
 		</table>
-		</form>
+		</form>		
 		<br>
+	
+		
+			
 {% endblock %}
+
+		
