Changed location of CSVform.html template
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/DataManagement/CSVform.html
+++ b/DataManagement/templates/DataManagement/CSVform.html
@@ -1,14 +1,10 @@
 {% extends "Platform.html" %}
 {% load bootstrap_toolkit %}
 
+{% block scripts_and_styles %}
+{% endblock %}
 
-{% block content %}
-		<script>
-		if ("{{ errMessage }}")
-				{alert("{{ errMessage }}")};
-			
-		</script>
-
+{% block content %}	
 		<form action = '' method = "POST" enctype='multipart/form-data'>
 		{% csrf_token %}
 		<table>
@@ -24,9 +20,6 @@
 		</table>
 		</form>		
 		<br>
-	
-		
-			
+
 {% endblock %}
 
-		
