Implemented angularJS dependencies
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/DataManagement/CSVpreview.html
+++ b/DataManagement/templates/DataManagement/CSVpreview.html
@@ -4,8 +4,9 @@
 
 {% block scripts_and_styles %}
 <link rel="stylesheet" href="{% static "DataManagement/CSVpreview.css" %}"> 
-<!-- <script src="{% static "DataManagement/DumpObjectIndented.js" %}"></script> -->
+<script src="{% static "SmoUtil.js" %}"></script>
 <script src="{% static "DataManagement/CSVpreview.js" %}"></script>
+
 {% endblock %}
 
 {% block content %}
