Implemented data import from CSV to HDF
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/DataManagement/templates/DataManagement/CSVpreview.html
+++ b/DataManagement/templates/DataManagement/CSVpreview.html
@@ -11,64 +11,74 @@
 
 {% block content %}
 <br>
-
-<div ng-app="csvImportApp" ng-controller="CsvImportController">	
+<h1>Import CSV</h1>
+<p>Select a <b>CSV</b> file to import</p>
+<div ng-app="csvImportApp" ng-controller="CsvImportController">
 	<table>		
 		<tr>
-		<td style=" text-align: right; font-weight: bold;">CSV File &nbsp</td><td style=" text-align: left;"><input ng-file-select="fileSelect($files)" type="file" /></td>
+			<td style=" text-align: right; font-weight: bold;">CSV File &nbsp</td><td style=" text-align: left;"><input ng-file-select="fileSelect($files)" type="file" /></td>
 		</tr>
-
 		<tr>
-		<td style=" text-align: right; font-weight: bold;">Rows to Display &nbsp</td><td style=" text-align: left;"><input ng-model="rowsInDisplay" name="rowsInDisplay" type="number" value="10" /></td>
+			<td style=" text-align: right; font-weight: bold;">Rows to Display &nbsp</td><td style=" text-align: left;"><input ng-model="numRowsInPreview" name="numRowsInPreview" type="number" value="10" /></td>
 		</tr>
-		
+		<tr><td><br/></td></tr>
 		<tr>
-		<td></td>	
-		<td><button  ng-click="fileSend()" >Submit</button></td>
+			<td></td>
+			<td>
+				<button  ng-click="sendFile()" >Upload</button>
+			</td>
 		</tr>
-		
 	  	<tr>
 			<td></td>	
-			<td><button ng-click="upload.abort()">Cancel Upload</button>
 		</tr> 
-		
+		<tr>
+			<td>
+{% verbatim %}			
+				<div class="progress">
+					<div style="width:{{progress}}%">{{progress}}%</div>
+				</div>
+{% endverbatim %}
+			</td>
+			<td>
+				<button ng-click="upload.abort()">Cancel Upload</button>
+			</td>			
+		</tr>
 	</table>
 
 	<br>
-	<div ng-hide="hidden">	
+	<div ng-if="showPreviewTable">	
 		<table class="dataTable"> 
 			<tr>
 				<td class="row-label">Use column</td>
-				<td ng-repeat="columnName in columnNames track by $index" class = "column-label">
-					<input type = "checkbox" ng-model="useColumn[$index]"></input> 
+				<td ng-repeat="column in columnProps" class = "column-label">
+					<input type = "checkbox" ng-model="column.use"></input> 
 				</td>
 			</tr>
 			<tr>
 				<td class="row-label">Column type</td>
-				<td ng-repeat="columnName in columnNames track by $index" class = "column-label">
-					<select ng-model = "columnTypes[$index]" ng-options = "typeName for typeName in columnPossibleTypes"></select> 
+				<td ng-repeat="column in columnProps" class = "column-label">
+					<select ng-model = "column.dataType" ng-options = "typeName for typeName in columnTypeChoices"></select> 
 				</td>
 			</tr>
 			<tr>
 				<td class="row-label">Column name</td>
-				<td ng-repeat="columnName in columnNames track by $index">
-					<input class="tableInput" ng-model="columnNames[$index]" class = "column-label"></input>
+				<td ng-repeat="column in columnProps">
+					<input ng-model="column.name" class = "column-label tableInput"></input>
 				</td>
-				
 			</tr>
-			<tr ng-repeat = "row in tableValues track by $index" ng-init = "rowIndex = $index + 1">
-				<td class="row-label" ng-click = "onRowHeaderClick(rowIndex)" ng-dblclick="onRowHeaderDblClick(rowIndex)" ng-bind="rowIndex"></td>
+			<tr ng-repeat = "row in csvPreviewData.tableValues track by $index" ng-init = "rowIndex = $index + 1">
+				<td class="row-label"  ng-bind="rowIndex" ng-click = "onRowHeaderClick(rowIndex)" ng-dblclick="onRowHeaderDblClick(rowIndex)"></td>
 				<td ng-repeat = "cellValue in row track by $index" ng-init = "colIndex = $index + 1">
-					<div ng-bind="cellValue" class="output" ng-style="cellStyle(rowIndex, colIndex)"></div>
+					<div class="output" ng-bind="cellValue" ng-style="cellStyle(rowIndex, colIndex)"></div>
 				</td>
 			</tr>
 		</table>
-		<button ng-click="send()">Submit</button>
-		<p>The file contains <span ng-bind="numRows"></span> rows<p>
+		<button ng-click="importHdf()">Import</button>
+		<p>The file contains <span ng-bind="csvPreviewData.numRows"></span> rows<p>
 		<p>Double click on a row header (leftmost cell with row number) to take the values and use them as column names. Afterwards you can additionally edit them on the column headers, and select a storage type for the column. 
 		If you don't want to use a column, uncheck the box above its name. With a single mouse click  select the first data row and submit.</p>
 		<p >Data starts from row number <span ng-bind="firstDataRow"></span></p>
-		<div ng-bind-html-unsafe="errorMessage"></div>
+		<div ng-bind="statusMessage"></div>
 
 	</div>	
 </div>
