--- a/DataManagement/templates/DataManagement/TestView.html
+++ b/DataManagement/templates/DataManagement/TestView.html
@@ -20,6 +20,7 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 			})
 			.success(function(data){
 				$scope.fileContent = data.fileContent;
+				console.log(angular.toJson($scope.fileContent, true));
 			})
 			.error(function(data){
 				console.log('error');
