Created smo.treeview for HDF file, based on angular.treeview
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/DataManagement/TestView.html
+++ b/DataManagement/templates/DataManagement/TestView.html
@@ -3,8 +3,11 @@
 {% load staticfiles %}
 
 {% block scripts_and_styles %}
-<script src="{% static 'angular-treeview/angular.treeview.js' %}"></script>
-<link rel="stylesheet" type="text/css" href="{% static 'angular-treeview/css/angular.treeview.css' %}">
+<!-- <script src="{% static 'angular-treeview/angular.treeview.js' %}"></script> -->
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'angular-treeview/css/angular.treeview.css' %}"> -->
+<script src="{% static 'smo-treeview/smo.treeview.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'smo-treeview/smo.treeview.css' %}">
+
 <script>
 angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])	
 	.config(['$httpProvider', function($httpProvider) {
