--- a/static/smo-treeview/smo.treeview.css
+++ b/static/smo-treeview/smo.treeview.css
@@ -19,30 +19,13 @@ div[data-tree-model] ul {
   list-style: none; 
   border: none;
   overflow: hidden;
+  list-style-type: none;
 }
 
 div[data-tree-model] li {
   position: relative;
   padding: 0 0 0 20px;
   line-height: 20px;
-}
-
-div[data-tree-model] li .expanded {
-  padding: 1px 10px;
-  background-image: url("../img/folder.png");
-  background-repeat: no-repeat;
-}
-
-div[data-tree-model] li .collapsed {
-  padding: 1px 10px;
-  background-image: url("../img/folder-closed.png");
-  background-repeat: no-repeat;
-}
-
-div[data-tree-model] li .normal {
-  padding: 1px 10px;
-  background-image: url("../img/file.png");
-  background-repeat: no-repeat;
 }
 
 div[data-tree-model] li i, div[data-tree-model] li span {
