--- a/static/smo-treeview/smo.treeview.css
+++ b/static/smo-treeview/smo.treeview.css
@@ -18,7 +18,7 @@ div[data-tree-model] ul {
   padding: 0;
   list-style: none; 
   border: none;
-  overflow: hidden;
+/*   overflow: hidden; */
   list-style-type: none;
 }
 
