included arguments in smo-hdf-browser angularJS directive
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/DataManagement/TestView.html
+++ b/DataManagement/templates/DataManagement/TestView.html
@@ -22,7 +22,7 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 <h1>Test page</h1>
 <div ng-app="testApp" ng-controller="testController">
 
-<smo-hdf-browser></smo-hdf-browser>
+<smo-hdf-browser tree-id="hdfView"></smo-hdf-browser>
 
 </div>
 {% endblock %}
